fix icon alignment

--- a/_sass/glacial/icons.scss
+++ b/_sass/glacial/icons.scss
@@ -5,13 +5,6 @@
     font-size: 1rem;
     display: inline-block;
     width: 2rem;
-}
-
-.fa-moon {
-    margin-bottom: 0.25rem;
-}
-
-.wi-day-sunny {
     margin-bottom: 0.125rem;
 }
 
